# h

./: Cargo.toml  README.md
compose/: docker-compose.yml
k/: build.gradle.kts  settings.gradle.kts
k/src/main/kotlin/k/: App.kt  Environment.kt
k/src/main/kotlin/k/kafka/: KafkaProdusent.kt
k/src/main/resources/: logback.xml
k/src/test/kotlin/k/: AppTest.kt
src/: environment.rs  main.rs
