[package]
name = "h"
version = "0.1.0"
authors = ["Kent Daleng <kent.daleng@nav.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rdkafka = { version = "0.24", features = ["cmake-build"] }
log = "0.4"
env_logger = "0.8"
chrono = "0.4"
